image overlap resolved

--- a/app/assets/stylesheets/components/supplier-record/_supplier-record.scss
+++ b/app/assets/stylesheets/components/supplier-record/_supplier-record.scss
@@ -28,7 +28,7 @@
   display: inline-block;
   position: relative;
   min-height: 33px;
-  padding-left: 50px;
+  padding-left: 60px;
 }
 
 .supplier-record__file-download:before {
@@ -36,8 +36,8 @@
     left: 0px;
     top: -6px;
     display: inline-block;
-    width: 40px;
-    height: 30px;
+    width: auto;
+    height: auto;
     background: #777777 image-url('corner-curl.png') 100% -1px no-repeat;
     color: #FFF;
     background-size: 9px;
